# snake-cpp

./: .gitignore  Ball.cpp  Ball.h  CMakeLists.txt  CMakePresets.json  Food.cpp  Food.h  Game.cpp  Game.h  GameConstants.h  Makefile  Paddle.cpp  Paddle.h  Readme.md  Renderer.cpp  Snake.cpp  Snake.h  SnakeGame  install-thirdparty-for-windows.bat  install-thirdparty-for-windows.sh  levels.json  main.cpp  pong-procedural.cpp  run-windows.bat  run.sh  vcpkg.json
cmake/: mingw-w64-x86_64.cmake
include/: Game.h  GameConstants.h  Graphics.h  PowerUp.hpp  Snake.h  UI.h  main.h
src/: Food.cpp  Game.cpp  Game.h  GameConstants.h  Graphics.cpp  MusicPlayer.cpp  MusicPlayer.h  PowerUp.cpp  Renderer.cpp  Renderer.h  Score.cpp  Score.h  Snake.cpp  Snake.h  UI.cpp  UI.h  main.cpp
